2002-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in (AM_HAVE_MT_FLAGS, AM_HAVE_MT_FILENO, AM_HAVE_MT_BLKNO,
	  AM_HAVE_MT_DSREG,AM_HAVE_MT_ERREG): Rename to HAVE_MT_FLAGS,
	  HAVE_MT_FILENO, HAVE_MT_BLKNO, HAVE_MT_DSREG and HAVE_MT_ERREG.
	* tape-src/output-tape.c: Ditto.

2002-10-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Undo patch of 2002-10-24. They are needed by amrecover.

	* client-src/getfsent.h (open_fstab, close_fstab, get_fstab_nextentry,
	  is_local_fstype): Add Prototype.
	* client-src/getfsent.c (open_fstab, close_fstab, get_fstab_nextentry,
	  is_local_fstype): remove Prototype.

2002-10-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
        Patch by Paul Bijnens <paul.bijnens@xplanation.com>

        * tape-src/tapetype.c: Detects and warns the user if the tape drive
	  has hardware compression enabled.

2002-10-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* restore-src/amrestore.c: New '-f <fileno>' flag, Do a rewind and
	  'fsf <fileno>' if -f is set.
	* man/amrestore.8: Document -f flag.

2002-10-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amfeatures.h (fe_amindexd_fileno_in_OLSD,
	  fe_amindexd_fileno_in_ORLD): New amfeatures.
	* common-src/amfeatures.c (am_init_feature_set): Set
	  fe_amindexd_fileno_in_OLSD and fe_amindexd_fileno_in_ORLD.
	* recover-src/amrecover.h (struct DIR_ITEM): Add fileno.
	* recover-src/display_commands.c (add_dir_list_item): Set fileno
	  in struct DIR_ITEM.
	* recover-src/display_commands.c (suck_dir_list_from_server): Read
	  fileno if fe_amindexd_fileno_in_OLSD is set.
	* recover-src/extract_list.c (struct EXTRACT_LIST): Add fileno.
	* recover-src/extract_list.c (add_file): Read fileno if
	  fe_amindexd_fileno_in_ORLD is set.
	* recover-src/extract_list.c (delete_file): Read fileno if
	  fe_amindexd_fileno_in_ORLD is set.
	* server-src/amindexd.c (opaque_ls): Write fileno if